--- a/08-dna_rna.Rmd
+++ b/08-dna_rna.Rmd
@@ -10,7 +10,7 @@ editor_options:
 
 Transcript abundances for expanded clones triplicates were quantified by Salmon (v.0.14) with GENCODE transcript v30 and options -l A -1 read1 -2 read2 -p 40 --validateMappings --seqBias --gcBias. Quantified transcripts were imported into R with ‘tximport’ (v 1.14). Expanded clones e7, e39 and e71 had one technical replicate excluded due to poor RNA quality
 
-```{r setup}
+```{r setup_functions}
 source("R/run_umap.R")
 ```
 
@@ -109,14 +109,14 @@ mda_ordered <- order_dataset(popseg_long = mdamb231_sc_bulk_cna_ml,
 mda_cocluster_consensus <- calculate_consensus(df = mda_ordered$dataset_ordered,
                                      clusters = mda_ordered$clustering_ordered$subclones)
 
-mda_cocluster_me_tree <- run_me_tree(consensus_df = mda_consensus,
+mda_cocluster_me_tree <- run_me_tree(consensus_df = mda_cocluster_consensus,
                                      clusters = mdamb231_sc_bulk_clustering,
                                      ploidy_VAL = mda_ploidy)
 ```
 
 ## Single-cell + Bulk Heatmap
 
-```{r}
+```{r sc_bulk_heat,  fig.height=8, warning=FALSE}
 plot_heatmap(df = mda_ordered$dataset_ordered,
              ploidy_VAL = mda_ploidy,
              ploidy_trunc = 2*(round(mda_ploidy))+2,
@@ -129,7 +129,7 @@ plot_heatmap(df = mda_ordered$dataset_ordered,
 ```
 
 ## Bulk Heatmap
-```{r}
+```{r bulk_heatmap, warning=FALSE}
 mdamb231_bulk_cna_long <- mda_ordered$dataset_ordered[str_detect(rownames(mda_ordered$dataset_ordered), "gDNA"),]
 
 # clustering info
@@ -153,7 +153,7 @@ plot_heatmap(df = mdamb231_bulk_ordered,
 
 ## DNA & RNA
 
-```{r merging}
+```{r merging, message = FALSE}
 # Biomart
 grch37 <-
   useMart(
@@ -242,8 +242,8 @@ cnt_avg <- cnt_avg %>%
 
 ```
 
-## * Moving averages
-```{r}
+## Moving averages
+```{r moving_averages}
 # Methods:
 # DNA copy number profiles from the expanded clusters are shown 
 # by taking the mode of the ith segment from their profiles 
@@ -251,46 +251,46 @@ cnt_avg <- cnt_avg %>%
 ```
 
 ## RNA PCA
-```{r}
-pcaData <- plotPCA(vst(dds), "cluster", returnData = T) %>% 
-  mutate(triplicate = str_extract(name, "C[0-9]+"),
-         triplicate = tolower(triplicate),
-         triplicate = paste0("e", triplicate)) %>% 
-  mutate(sample = str_extract(name, "MDAMB231C[0-9]+"))
-percentVar <- round(100 * attr(pcaData, "percentVar"))
-
-cluster_anno <- sc_bulk_231_leiden_umap$mc_classification %>% 
-  filter(str_detect(cells, "gDNA")) %>% 
-  mutate(sample = str_remove(cells, "gDNA")) %>% 
-  mutate(sample = str_extract(sample, "MDAMB231C[0-9]+"))
-
-pcaData <- pcaData %>% 
-  left_join(cluster_anno, by = c("group" = "hdb", "sample" = "sample"))
-
-p_pca <- ggplot(pcaData, aes(x = PC1,
-                             y = PC2)) +
-  scale_color_manual(values = c(sc_bulk_231_umap_colors$subclones,sc_bulk_231_umap_colors$superclones)) +
-  geom_point(aes(color = fct_relevel(g_cl, gtools::mixedsort(unique(as.character(pcaData$g_cl))))), size = 8) +
-  geom_point(aes(color = fct_relevel(group, gtools::mixedsort(unique(as.character(pcaData$group))))), size = 3) + 
-  # xlab(paste0("PC1: ", percentVar[1], "% variance")) +
-  # ylab(paste0("PC2: ", percentVar[2], "% variance")) +
-  xlab("PC1") +
-  ylab("PC2") +
-  # coord_fixed() +
-  theme_cowplot() + 
-  theme(axis.title.x=element_text(size = 16),
-        axis.text.x= element_blank(),
-        axis.ticks.x=element_blank(),
-        axis.title.y = element_text(size = 16),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.line = element_blank(),
-        plot.title = element_text(hjust = 0.5),
-        legend.position = "none",
-        panel.border = element_rect(color = "black", 
-                                    fill = NA,
-                                    size = 2)) +
-  labs(color = "subclone")
+```{r rna_pca}
+# pcaData <- plotPCA(vst(dds), "cluster", returnData = T) %>% 
+#   mutate(triplicate = str_extract(name, "C[0-9]+"),
+#          triplicate = tolower(triplicate),
+#          triplicate = paste0("e", triplicate)) %>% 
+#   mutate(sample = str_extract(name, "MDAMB231C[0-9]+"))
+# percentVar <- round(100 * attr(pcaData, "percentVar"))
+# 
+# cluster_anno <- sc_bulk_231_leiden_umap$mc_classification %>% 
+#   filter(str_detect(cells, "gDNA")) %>% 
+#   mutate(sample = str_remove(cells, "gDNA")) %>% 
+#   mutate(sample = str_extract(sample, "MDAMB231C[0-9]+"))
+# 
+# pcaData <- pcaData %>% 
+#   left_join(cluster_anno, by = c("group" = "hdb", "sample" = "sample"))
+# 
+# p_pca <- ggplot(pcaData, aes(x = PC1,
+#                              y = PC2)) +
+#   scale_color_manual(values = c(sc_bulk_231_umap_colors$subclones,sc_bulk_231_umap_colors$superclones)) +
+#   geom_point(aes(color = fct_relevel(g_cl, gtools::mixedsort(unique(as.character(pcaData$g_cl))))), size = 8) +
+#   geom_point(aes(color = fct_relevel(group, gtools::mixedsort(unique(as.character(pcaData$group))))), size = 3) + 
+#   # xlab(paste0("PC1: ", percentVar[1], "% variance")) +
+#   # ylab(paste0("PC2: ", percentVar[2], "% variance")) +
+#   xlab("PC1") +
+#   ylab("PC2") +
+#   # coord_fixed() +
+#   theme_cowplot() + 
+#   theme(axis.title.x=element_text(size = 16),
+#         axis.text.x= element_blank(),
+#         axis.ticks.x=element_blank(),
+#         axis.title.y = element_text(size = 16),
+#         axis.text.y = element_blank(),
+#         axis.ticks.y = element_blank(),
+#         axis.line = element_blank(),
+#         plot.title = element_text(hjust = 0.5),
+#         legend.position = "none",
+#         panel.border = element_rect(color = "black", 
+#                                     fill = NA,
+#                                     size = 2)) +
+#   labs(color = "subclone")
 ```
 
 
