--- a/08-dna_rna.Rmd
+++ b/08-dna_rna.Rmd
@@ -435,6 +435,8 @@ p_pca <- ggplot(pcaData, aes(x = PC1,
                                     fill = NA,
                                     size = 2)) +
   labs(color = "subclone")
+
+p_pca
 ```
 
 ## FGSEA
